force-app/main/default/objects/BBQ_Budget__c/BBQ_Budget__c.object-meta.xml
<CustomObject>
    <description>Used to manage BBQ event budgets, including related items, contacts, and evaluations</description>
    <label>BBQ Budget</label>
    <nameField>
        <label>Roasted budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BBQ Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>