force-app/main/default/objects/BBQ_Budget__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>BBQ Budgets</relationshipLabel>
    <relationshipName>BBQ_Budgets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>