force-app/main/default/objects/BBQ_Budget__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <description>Time field representing the date of the roast budget</description>
    <label>End</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>