force-app/main/default/objects/BBQ_Budget__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Start</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>