force-app/main/default/objects/BBQ_Budget__c/fields/Total_amount__c.field-meta.xml
<CustomField>
    <fullName>Total_amount__c</fullName>
    <description>Summary field to total item values.</description>
    <label>Total amount</label>
    <summarizedField>BBQ_Budget_Items__c.Amount__c</summarizedField>
    <summaryForeignKey>BBQ_Budget_Items__c.BBQ_Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>