force-app/main/default/objects/BBQ_Budget__c/validationRules/costumer_CPF.validationRule-meta.xml
<ValidationRule>
    <fullName>costumer_CPF</fullName>
    <active>true</active>
    <description>CPF required for the client to make a quote</description>
    <errorConditionFormula>ISBLANK( Customer__r.CPF__c )</errorConditionFormula>
    <errorMessage>The client must have a CPF to request a quote.</errorMessage>
</ValidationRule>