force-app/main/default/objects/BBQ_Budget__c/validationRules/Start_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_End_Date</fullName>
    <active>true</active>
    <description>The start date cannot be later than the end date.</description>
    <errorConditionFormula>Start__c &gt;   End__c</errorConditionFormula>
    <errorMessage>The start date cannot be later than the end date.</errorMessage>
</ValidationRule>