force-app/main/default/objects/BBQ_Budget__c/listViews/List_BBQ_Budgets.listView-meta.xml
<ListView>
    <fullName>List_BBQ_Budgets</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <label>List BBQ Budgets</label>
</ListView>