force-app/main/default/objects/BBQ_Budget__c/listViews/List_BBQBudgets.listView-meta.xml
<ListView>
    <fullName>List_BBQBudgets</fullName>
    <columns>NAME</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <columns>Status__c</columns>
    <columns>Total_amount__c</columns>
    <filterScope>Mine</filterScope>
    <label>List BBQBudgets</label>
</ListView>