force-app/main/default/objects/BBQ_Budget__c/listViews/Recent_Budgets.listView-meta.xml
<ListView>
    <fullName>Recent_Budgets</fullName>
    <columns>NAME</columns>
    <columns>Total_amount__c</columns>
    <columns>Customer__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>,New,In process of approval,Scheduled,Completed,Cancelled</value>
    </filters>
    <label>Recent Budgets</label>
</ListView>